--- a/src/pages/thermodynamics/complex_problems.astro
+++ b/src/pages/thermodynamics/complex_problems.astro
@@ -14,8 +14,29 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
 <Layout title="Complex Problems">
-<Section title="Solving complex systems"></Section>
-<SubSection title="Composite Thermodynamic Systems">
+
+    <div slot="navtree">
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#composite_thermodynamic_systems'>Composite Thermodynamic Systems</a>
+                <ul class='list-group list-group-flush py-0'> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#step_1_identify_known_states'>Step 1: Identify Known States</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#step_2_determine_unknowns'>Step 2: Determine Unknowns</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#step_3_write_energy_balances'>Step 3: Write Energy Balances</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#example_refrigeration_and_heat_pump_cycles'>Example: Refrigeration and Heat Pump Cycles</a></li>
+                </ul>
+            </li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#(colorred}_textbftransient_systems})'>Transient Systemss</a>
+                <ul class='list-group list-group-flush py-0'> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#transient_vs._steady_state_example'>Transient vs. Steady State Example</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div> 
+
+
+
+<Section title="Solving complex systems" id="solving_complex_systems"></Section>
+<SubSection title="Composite Thermodynamic Systems" id="composite_thermodynamic_systems">
 <p>Before starting any problem, it is very helpful to familiarize yourself with the elements being addressed and any terminology being used. In approaching <strong>integrated, multi-device systems</strong>, following steps provide a framework that may avoid simple mistakes:</p>
 <Enumerate>
 
@@ -27,18 +48,18 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 </SubSection>
 
-<SubSubSection title="Step 1: Identify Known States">
+<SubSubSection title="Step 1: Identify Known States" id="step_1_identify_known_states">
 <p>
 The <strong>state principle</strong> is a guide to aid in determining the number of independent properties required to fix the state of a system. When the state of a system is known, it can be plotted as a single point on a <InlineEquation equation="pv" /> diagram. The state of a <strong>simple, compressible</strong> substance is considered known if at least two intensive properties are known. Recall that intensive properties are independent of the total mass of the substance, such as <InlineEquation equation="v" />, <InlineEquation equation="u" />, <InlineEquation equation="h" />, <InlineEquation equation="T" />, <InlineEquation equation="p" />, and <InlineEquation equation="x" />.</p>
 
 </SubSubSection>
 
-<SubSubSection title="Step 2: Determine Unknowns">
+<SubSubSection title="Step 2: Determine Unknowns" id="step_2_determine_unknowns">
 <p>
 We next apply our knowledge of thermodynamic devices to identify other energy flows in the system that might not be given.  Although the primary purpose of this class is tracking the flow of energy, the preliminary step before writing any energy balance should be to identify mass flow streams and write any mass balances. </p>
 </SubSubSection>
 
-<SubSubSection title="Step 3: Write Energy Balances">
+<SubSubSection title="Step 3: Write Energy Balances" id="step_3_write_energy_balances">
 <p>
 After determining the necessary mass rate balances, we can write energy balances.  Depending on the amount of unknown, as variables needing to be determined there are two approaches to writing energy balances.</p>
 <Enumerate>
@@ -55,7 +76,7 @@ The total possible equations are determined by the sum of the number of `devices
 
 </SubSubSection>
 
-<SubSubSection title="Example: Refrigeration and Heat Pump Cycles">
+<SubSubSection title="Example: Refrigeration and Heat Pump Cycles" id="example_refrigeration_and_heat_pump_cycles">
 <p>Refrigeration and heat pump cycles differ from a power cycle in <InlineEquation equation="3" /> ways: 1) heat is transferred from a cold reservoir to a hot reservoir, going in the opposite direction of spontaneous heat transfer, 2) there is a net power input to accomplish this task, and 3) performance is not quantified in terms of thermal efficiency <InlineEquation equation="\\eta" /> since this performance measurement does not reflect the objective of these cycles. Performance is still quantified as</p>
 <DisplayEquation equation='\\text{Performance} \\equiv \\frac{\\textrm{Required Output}}{\\textrm{Necessary Input}}' id="performance" title="Performance" background="True"/>
 <p>For a refrigeration cycle, the required output is heat removed <strong>from</strong> the cold environment and the necessary input is the net work input <InlineEquation equation="|\\dot{W}_{\\text{cycle}}|" />. For a heat pump, the required output is the heat transferred <strong>to</strong> the hot environment. These performance measures are known as the <strong>coefficient of performance</strong> <InlineEquation equation="\\beta" /> and <InlineEquation equation="\\gamma" /> for a refrigeration cycle and heat pump cycle, respectively. </p>
@@ -105,7 +126,7 @@ The expression for the coefficient of performance <InlineEquation equation="\\ga
 </p>
 </SubSubSection>
 
-<SubSection title="\\(\\color{red} \\textbf{Transient Systems}\\)">
+<SubSection title="\\(\\color{red} \\textbf{Transient Systems}\\)" id="(color{red}_textbf{transient_systems})">
 <p>A transient system is a system in which the time derivative related to the system gain or loss (such as mass or energy) is not zero, which is the opposite of a steady state system.</p>
 <h4><strong>Transient Systems:</strong></h4>
  
@@ -121,7 +142,7 @@ The expression for the coefficient of performance <InlineEquation equation="\\ga
 
 </SubSection>
 
-<SubSubSection title="Transient vs. Steady State Example">
+<SubSubSection title="Transient vs. Steady State Example" id="transient_vs._steady_state_example">
 <p>
 Imagine a two-tiered water fountain as depicted below. The maximum mass capacities of tier A and tier B are <InlineEquation equation="m_{A,max}" /> and <InlineEquation equation="m_{B,max}" />, respectively. Once the mass in the tier crosses its threshold, water will overflow the tier. The inlet mass flow rate is a constant given by <InlineEquation equation="\\dot{m}_{in}" />. However, the outlet flow rate is proportional to the amount of material in tier B, written as <InlineEquation equation="\\dot{m}_{out} = m_B(t)/\\mathcal{T}" />, where <InlineEquation equation="1/\\mathcal{T}" /> is a proportionality constant with units of inverse time and <InlineEquation equation="m_B(t)" /> is the mass of the fluid in tier B at time <InlineEquation equation="t" />. We can fully describe the fountain's operation at a variety of time points and conditions using the mass balance expressions.</p>
 
