--- a/src/pages/thermodynamics/heat_and_work.astro
+++ b/src/pages/thermodynamics/heat_and_work.astro
@@ -13,7 +13,21 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
 <Layout title="Energy Transfers">
-<Section title="Energy Transfers">
+
+    <div slot="navtree">
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#heat'>Heat</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#work'>Work</a>
+                <ul class='list-group list-group-flush py-0'> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#(pv)_work'>\\(pV\\) work</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#shaft_work'>Shaft work</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
+
+<Section title="Energy Transfers" id="energy_transfers">
 <p>When mass does not flow into or out of a system, the energy of the system changes in only two ways, through the loss or addition of <strong>work</strong> and/or <strong>heat</strong>.</p>
 <p>
  The internal energy (<InlineEquation equation="U" />) of a system is affected by the energetic contributions from heat flow (<InlineEquation equation="Q" />) in and out of a system and work (<InlineEquation equation="W" />)done by or on a system.  </p>
@@ -25,7 +39,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 </Section>
 
-<SubSection title="Heat">
+<SubSection title="Heat" id="heat">
 <p>In thermodynamics, heat <InlineEquation equation="Q" /> is the thermal energy transferred between systems due to a temperature difference. Heat can both flow into and out of a system as shown in <a href="#heatschematic">Figure 2</a>.</p>
 
 <Image src="/thermodynamics/heat_and_work/fig2-real.png" width="7" id="heatschematic">
@@ -37,7 +51,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 
 
-<SubSection title="Work">
+<SubSection title="Work" id="work">
 <p>Recall from previous physics courses, that when a force <InlineEquation equation="f" /> acts over a distance <InlineEquation equation="d" /> it does work, defined as</p>
 
 <DisplayEquation equation='W=fd.' title="Linear work force-displacement relationship" background="True"/>
@@ -82,7 +96,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 </SubSubSection>
 
-<SubSubSection title="Shaft work">
+<SubSubSection title="Shaft work" id="shaft_work">
 
 <p>Work can also be done via shaft work.  This can be explained by a shaft, on which a weight and pulley are mounted, providing a mechanism for inputting or extracting work as in <a href="#CycleWithThermalReservoir">Figure 6</a>. Work <InlineEquation equation="W_{\\text{cycle}}" /> is done by the lowering mass on the system when the mass is released from its the raised position. The motion of the molecules in the system increases due to the shaft work input. This additional molecular energy temporarily increases the temperature of the system before the excess thermal energy is transmitted as heat <InlineEquation equation="Q" /> to the reservoir.  </p>
 
